--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -56,8 +56,8 @@ a {
 	text-decoration: none;
 }
 
-a:visited, a:hover, a:active {
-	color: rgba(255,242,143,1)
+a:hover {
+	color: rgba(255,242,143,1);
 }
 
 .pink {
