--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -36,6 +36,10 @@
 	text-align: center;
 }
 
+.underline {
+	text-decoration: underline;
+}
+
 h1 {
 	font-size: 100px;
 	line-height: 100px;
@@ -57,12 +61,18 @@ h4 {
 	vertical-align: middle;
 }
 
+
+
 a {
 	text-decoration: none;
 }
 
 a:hover {
 	color: rgba(255,242,143,1);
+}
+
+a:active {
+	color: rgba(0,0,0,0.5);
 }
 
 .pink {
@@ -86,15 +96,23 @@ a:hover {
 }
 
 .spacing3 {
-	padding: 80px 20px 20px 20px;
+	padding: 80px 00px 00px 00px;
 }
 
 .spacing4 {
 	padding: 40px 0px 40px 0px;
 }
 
-.header {
+.spacing5 {
+	padding: 10px 0px 10px 0px;
+}
 
+.spacing6 {
+	padding: 0px 0px 10px 0px;
+}
+
+.content-entry {
+	padding: 10px 0px 0px 0px;
 }
 
 .border-bottom {
@@ -123,6 +141,16 @@ a:hover {
 
 .align-left {
 	text-align: left;
+	display: block;
+}
+
+.align-centre {
+	text-align: center;
+	display: block;
+}
+
+.align-right {
+	text-align: center;
 	display: block;
 }
 
